Update responses for HDXI.

--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
 
           var Quotation=new Array()
 
-          Quotation[0] = "YES!";
-          Quotation[1] = "The people voted. Yes!";
-          Quotation[2] = "Beat! Better luck next year Rich.";
-          Quotation[3] = "Yes. @tvars beat him by 4 points...";
+          Quotation[0] = "We'll find out tomorrow...";
+          Quotation[1] = "Signs point to yes!";
+          Quotation[2] = "Outlook good.";
+          Quotation[3] = "As I see it, yes.";
+          Quotation[4] = "Without a doubt.";
 
           var Q = Quotation.length;
           var whichQuotation=Math.round(Math.random()*(Q-1));
